fix feature alignment in section track

--- a/style.css
+++ b/style.css
@@ -207,10 +207,22 @@ footer li {
   }
 
   .flex-row {
+    margin: 4em 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-content: center;
+  }
+
+  .flex-row .feature h3,
+  .flex-row .feature p {
+    text-align: left;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .flex-row .feature {
+    align-items: flex-start;
   }
 
   .image-section {
@@ -226,6 +238,13 @@ footer li {
   .feature-wrapper {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    /* padding: inherit 3em; */
+  }
+
+  .feature-wrapper .feature {
+    width: 80%;
+    margin: 2em 0;
   }
 
   .feature img {
